--- a/benchmarks/CMakeLists.txt
+++ b/benchmarks/CMakeLists.txt
@@ -14,7 +14,8 @@ macro(mc_rtc_benchmark NAME)
   else()
     message(FATAL_ERROR "Cannot add mc_rtc_test: neither ${NAME}.cpp nor ${NAME}.in.cpp exists in ${CMAKE_CURRENT_SOURCE_DIR}")
   endif()
-  target_link_libraries(${NAME} benchmark ${ARGN})
+  # Linking with Boost::thread fixes an issue with pthread
+  target_link_libraries(${NAME} benchmark Boost::thread ${ARGN})
   generate_msvc_dot_user_file(${NAME})
   # Add benchmark as unit-test
   if(${BUILD_TESTING})
