--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -82,7 +82,7 @@ jobs:
         cd utils
         if [[ "${{ matrix.os }}" == "windows-latest" ]]
         then
-          ./build_and_install.sh --user-input false --with-python-support false --build-testing false
+          ./build_and_install.sh --user-input false --with-python-support false --build-testing false --build-benchmarks true
         else
           ./build_and_install.sh --user-input false --build-benchmarks true
         fi
@@ -93,10 +93,10 @@ jobs:
         compiler: ${{ matrix.compiler }}
         build-type: ${{ matrix.build-type }}
         ubuntu: |
-          apt: cython cython3 python-nose python3-nose python-numpy python3-numpy python-coverage python3-coverage python-setuptools python3-setuptools libeigen3-dev doxygen doxygen-latex libboost-all-dev libtinyxml2-dev libgeos++-dev libnanomsg-dev libyaml-cpp-dev libltdl-dev libbenchmark-dev
+          apt: cython cython3 python-nose python3-nose python-numpy python3-numpy python-coverage python3-coverage python-setuptools python3-setuptools libeigen3-dev doxygen doxygen-latex libboost-all-dev libtinyxml2-dev libgeos++-dev libnanomsg-dev libyaml-cpp-dev libltdl-dev
         macos: |
           cask: gfortran
-          brew: eigen boost tinyxml2 geos nanomsg yaml-cpp pkg-config libtool google-benchmark
+          brew: eigen boost tinyxml2 geos nanomsg yaml-cpp pkg-config libtool
           pip: Cython coverage nose numpy
         windows: |
           pip: Cython coverage nose numpy
@@ -111,8 +111,6 @@ jobs:
               ref: 1.1.5
             - path: jbeder/yaml-cpp
               ref: 29dcf92f870ee51cce8d68f8fcfe228942e8dfe1
-            - path: google/benchmark
-              ref: v1.3.0
         github: |
           - path: humanoid-path-planner/hpp-spline
             ref: v4.7.0
@@ -133,7 +131,6 @@ jobs:
       with:
         compiler: ${{ matrix.compiler }}
         build-type: ${{ matrix.build-type }}
-        options: -DBUILD_BENCHMARKS:BOOL=ON
     - name: Build with ROS
       if: (matrix.os == 'ubuntu-16.04' || matrix.os == 'ubuntu-18.04') && matrix.build-type != 'script'
       run: |
@@ -161,7 +158,7 @@ jobs:
         popd
         pushd .
         cd build
-        cmake -DBUILD_BENCHMARKS:BOOL=ON ../ && make -j2 && sudo make install || exit 1
+        cmake ../ && make -j2 && sudo make install || exit 1
         popd
     - name: Upload documentation
       # Only run on master branch and for one configuration
