[states][Message] Simplify log/gui logic

--- a/doc/_examples/yaml/State/Message.yaml
+++ b/doc/_examples/yaml/State/Message.yaml
@@ -1,12 +1,11 @@
 ---
 WarningDebugMessage:
   base: Message
-  type: warning
+  log: warning
   message: 'Warning: the following action may be dangerous'
 GUIMessage:
   base: Message
-  gui: true
-  log: false
-  category: ["Action"]
+  gui: ["Action"]
+  log: none
   prefix: "Vision check"
   message: "Please check that the object has successfully been detected."
