--- a/src/mc_control/samples/FSM/etc/FSM.in.conf
+++ b/src/mc_control/samples/FSM/etc/FSM.in.conf
@@ -305,14 +305,14 @@
     "MessageMoveRightFootEval":
     {
       "base": "Message",
-      "message": "Move Right Foot state completed with eval completion criteria",
-      "type": "success"
+      "log": "success",
+      "message": "Move Right Foot state completed with eval completion criteria"
     },
     "MessageMoveRightFootTimeout":
     {
       "base": "Message",
-      "message": "Move Right Foot state completed with timeout completion criteria",
-      "type": "success"
+      "log": "success",
+      "message": "Move Right Foot state completed with timeout completion criteria"
     },
     "AddLeftFootCoMWithWarning":
     {
@@ -323,7 +323,8 @@
         "Message":
         {
           "base": "Message",
-          "type": "warning",
+          "gui": [],
+          "log": "warning",
           "message": "The previous state has completed, but no valid transition pattern matched for state MoveLeftFootCoM, defaulting to state AddLeftFootCoM (this warning was triggered on purpose to demonstrate the defaulting mechanism)"
         }
       }
