[mc_rbdyn] Add backward compatibility with mc_rbdyn_urdf results
This allows some time for existing RobotModule implementations to adapt

--- a/debian/control
+++ b/debian/control
@@ -18,6 +18,7 @@ Build-Depends: debhelper (>= 9),
                libboost-timer-dev,
                libtasks-qld-dev|libtasks-dev,
                libeigen-quadprog-dev,
+               libmc-rbdyn-urdf-dev,
                libgeos++-dev,
                mc-rtc-data,
                python,
@@ -34,6 +35,8 @@ Build-Depends: debhelper (>= 9),
                cython3,
                python-tasks,
                python3-tasks,
+               python-mc-rbdyn-urdf,
+               python3-mc-rbdyn-urdf,
                libnanomsg-dev,
                libhpp-spline-dev,
                libyaml-cpp-dev,
@@ -56,6 +59,7 @@ Depends: cmake,
          libboost-timer-dev,
          libtasks-qld-dev|libtasks-dev,
          libeigen-quadprog-dev,
+         libmc-rbdyn-urdf-dev,
          libgeos++-dev,
          libnanomsg-dev,
          libhpp-spline-dev,
@@ -122,7 +126,7 @@ Description: mc-rtc - API documentation
 Package: python-mc-rtc
 Section: python
 Architecture: any
-Depends: ${Python:Depends}, ${misc:Depends}, ${shlibs:Depends}, python-all, python-tasks
+Depends: ${python:Depends}, ${misc:Depends}, ${shlibs:Depends}, python-all, python-tasks, python-mc-rbdyn-urdf
 Description: mc_rtc - Python bindings
  mc_rtc is an interface for simulated and real robotic systems suitable for
  real-time control.  It provides programmers with a simple interface to build
@@ -134,7 +138,7 @@ Description: mc_rtc - Python bindings
 Package: python3-mc-rtc
 Section: python
 Architecture: any
-Depends: ${Python3:Depends}, ${misc:Depends}, ${shlibs:Depends}, python3-all, python3-tasks
+Depends: ${python3:Depends}, ${misc:Depends}, ${shlibs:Depends}, python3-all, python3-tasks, python3-mc-rbdyn-urdf
 Description: mc_rtc - Python bindings
  mc_rtc is an interface for simulated and real robotic systems suitable for
  real-time control.  It provides programmers with a simple interface to build
