--- a/doc/_examples/yaml/MetaTask/LookAtSurfaceTask.yaml
+++ b/doc/_examples/yaml/MetaTask/LookAtSurfaceTask.yaml
@@ -1,5 +1,5 @@
 type: lookAtSurface
 body: bodyName
 bodyVector: [1.0, 0.0, 0.0]
-surfaceRobotIndex: 0
+surfaceRobot: targetRobot
 surface: targetSurfaceName
