--- a/src/mc_robots/CMakeLists.txt
+++ b/src/mc_robots/CMakeLists.txt
@@ -24,8 +24,8 @@ macro(generate_aliases PATH VAR NAME FILE_IN FILE_OUT)
     list(APPEND ${VAR} "${NAME}/${URDF_NAME}: [${NAME}, ${PATH}, ${URDF_NAME}]")
   endforeach()
   string(REPLACE ";" "\n" ${VAR} "${${VAR}}")
-  configure_file("${FILE_IN}" "${CMAKE_CURRENT_BINARY_DIR}/${FILE_OUT}")
-  install(FILES "${CMAKE_CURRENT_BINARY_DIR}/${FILE_OUT}" DESTINATION "${MC_ROBOTS_INSTALL_PREFIX}/aliases/")
+  configure_file("${FILE_IN}" "${CMAKE_CURRENT_BINARY_DIR}/aliases/${FILE_OUT}")
+  install(FILES "${CMAKE_CURRENT_BINARY_DIR}/aliases/${FILE_OUT}" DESTINATION "${MC_ROBOTS_INSTALL_PREFIX}/aliases/")
 endmacro()
 
 generate_aliases("${MC_ENV_DESCRIPTION_PATH}" ENV_ALIASES env env_aliases.in.yml env_aliases.yml)
