[CI][tests] Use generator expression for aliases files

--- a/src/mc_robots/CMakeLists.txt
+++ b/src/mc_robots/CMakeLists.txt
@@ -25,12 +25,11 @@ macro(generate_aliases PATH VAR NAME FILE_IN FILE_OUT)
   endforeach()
   string(REPLACE ";" "\n" ${VAR} "${${VAR}}")
 
-  if(CMAKE_CONFIGURATION_TYPES)
-    set(PATH_OUT "${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_BUILD_TYPE}/aliases/${FILE_OUT}")
-  else()
-    set(PATH_OUT "${CMAKE_CURRENT_BINARY_DIR}/aliases/${FILE_OUT}")
-  endif()
+  set(PATH_OUT "${CMAKE_CURRENT_BINARY_DIR}/aliases/${FILE_OUT}")
   configure_file("${FILE_IN}" "${PATH_OUT}")
+  if(CMAKE_CONFIGURATION_TYPES)
+    file(GENERATE OUTPUT "${CMAKE_CURRENT_BINARY_DIR}/$<CONFIGURATION>/aliases/${FILE_OUT}" INPUT "${PATH_OUT}")
+  endif()
   install(FILES "${PATH_OUT}" DESTINATION "${MC_ROBOTS_INSTALL_PREFIX}/aliases/")
 endmacro()
 
