--- a/doc/_examples/yaml/MetaTask/OrientationTask.yaml
+++ b/doc/_examples/yaml/MetaTask/OrientationTask.yaml
@@ -1,5 +1,5 @@
 type: orientation
-body: bodyName
+body: r_wrist
 orientation: [1.0, 0.0, 0.0,
               0.0, 1.0, 0.0,
               0.0, 0.0, 1.0]
