[debian] Add libspdlog-dev to dependencies
Note: this package is part of the multi-contact mirrors and overwrite
the existing Ubuntu package which lags too much behind (especially on
Xenial). However, afaik, no other packages in Ubuntu depends on it so we
should be fine.

--- a/debian/control
+++ b/debian/control
@@ -40,6 +40,7 @@ Build-Depends: debhelper (>= 9),
                libnanomsg-dev,
                libhpp-spline-dev,
                libyaml-cpp-dev,
+               libspdlog-dev,
 # ros-@ROS_DISTRO@-ros-base,
 # ros-@ROS_DISTRO@-roscpp,
 # ros-@ROS_DISTRO@-sensor-msgs,
