[actions] Also run packaging on pull-requests

--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -5,6 +5,9 @@ on:
     types:
     - package-master
     - package-release
+  pull_request:
+    branches:
+    - "**"
   push:
     paths-ignore:
     - ".gitlab-ci.yml"
