[debian] libspdlog-dev is also required by libmc-rtc-dev

--- a/debian/control
+++ b/debian/control
@@ -65,6 +65,7 @@ Depends: cmake,
          libnanomsg-dev,
          libhpp-spline-dev,
          libyaml-cpp-dev,
+         libspdlog-dev,
          libmc-rtc1 (= ${binary:Version}),
          ${misc:Depends}
 Suggests: libmc-rtc-doc
