--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -131,6 +131,4 @@ target_link_libraries(dummyServer PUBLIC mc_control)
 ######################
 # -- Filters test -- #
 ######################
-add_executable(test_filters test_filters.cpp)
-target_link_libraries(test_filters PUBLIC mc_filter SpaceVecAlg::SpaceVecAlg Boost::unit_test_framework Boost::disable_autolinking)
-target_compile_definitions(test_filters PRIVATE -DBOOST_TEST_DYN_LINK -DBOOST_TEST_MAIN)
+mc_rtc_test(test_filters mc_filter SpaceVecAlg::SpaceVecAlg)
