LookupTable implementation (+test/benchmark)
Adds a LookupTable implementation for convenient pre-computation,
storing and access of heavy functions.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -136,3 +136,8 @@ target_link_libraries(dummyServer PUBLIC mc_control)
 mc_rtc_test(test_filters mc_filter SpaceVecAlg::SpaceVecAlg)
 
 mc_rtc_test(test_interpolation mc_control)
+
+#####################################
+# -- Temporary HMC-related tests -- #
+#####################################
+mc_rtc_test(test_hmc mc_planning)
