--- a/benchmarks/CMakeLists.txt
+++ b/benchmarks/CMakeLists.txt
@@ -26,3 +26,4 @@ mc_rtc_benchmark(benchCompletionCriteria mc_control)
 mc_rtc_benchmark(benchSimulationContactSensor mc_control)
 mc_rtc_benchmark(benchRobotLoading mc_rbdyn)
 mc_rtc_benchmark(benchAllocTasks mc_tasks)
+mc_rtc_benchmark(benchHMC mc_planning)
