--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -177,6 +177,30 @@ jobs:
         cd build
         cmake ../ && make -j2 && sudo make install || exit 1
         popd
+    - name: Upload documentation (HMC fork)
+      # Only run on master branch and for one configuration
+      if: matrix.os == 'ubuntu-18.04' && matrix.build-type == 'RelWithDebInfo' && matrix.compiler == 'gcc' && github.ref == 'refs/heads/topic/hmc' && github.repository == 'arntanguy/mc_rtc'
+      run: |
+        set -x
+        pushd .
+        cd doc
+        cp -r /usr/local/share/doc/mc_rtc/doxygen-html .
+        find . -type f -print0 | xargs -0 sed -i -e's@/usr/local/share/doc/SpaceVecAlg/doxygen-html/@https://jrl-umi3218.github.io/SpaceVecAlg/doxygen/HEAD/@g'
+        find . -type f -print0 | xargs -0 sed -i -e's@/usr/local/share/doc/RBDyn/doxygen-html/@https://jrl-umi3218.github.io/RBDyn/doxygen/HEAD/@g'
+        find . -type f -print0 | xargs -0 sed -i -e's@/usr/local/share/doc/Tasks/doxygen-html/@https://jrl-umi3218.github.io/Tasks/doxygen/HEAD/@g'
+        find . -type f -print0 | xargs -0 sed -i -e's@/usr/local/share/doc/sch-core/doxygen-html/@https://jrl-umi3218.github.io/sch-core/doxygen/HEAD/@g'
+        find . -type f -print0 | xargs -0 sed -i -e's@/usr/local/share/doc/mc_rbdyn_urdf/doxygen-html/@https://jrl-umi3218.github.io/mc_rbdyn_urdf/doxygen/HEAD/@g'
+        sudo apt-get install -qq ruby-dev ruby-bundler libxml2-dev
+        bundle install --path vendor
+        git clone -b gh-pages https://arntanguy:${{ secrets.GH_PAGES_TOKEN }}@github.com/arntanguy/mc_rtc /tmp/website
+        bundle exec jekyll build --trace -b /mc_rtc -d /tmp/website
+        cd /tmp/website
+        git add .
+        git config --global user.email "arn.tanguy@gmail.com"
+        git config --global user.name "Arnaud TANGUY (Automated CI update)"
+        git commit -m "Website from commit ${GITHUB_SHA}"
+        git push origin gh-pages
+        popd
     - name: Upload documentation
       # Only run on master branch and for one configuration
       if: matrix.os == 'ubuntu-18.04' && matrix.build-type == 'RelWithDebInfo' && matrix.compiler == 'gcc' && github.ref == 'refs/heads/master' && github.repository == 'jrl-umi3218/mc_rtc'
