[HMC/samples] Sample controller generating and tracking CoM/ZMP Trajectory
Write a first simple example that:
- Generates the CoM/ZMP trajectory (open-loop)
- Tracks it with the LIPMStabilizer from Stephane
- Adds GUI/live plot visualization

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -156,6 +156,7 @@ include(CMakeModules/ListAllFiles.cmake)
 add_subdirectory(CMakeModules)
 add_subdirectory(doc)
 add_subdirectory(src)
+add_subdirectory(samples)
 add_subdirectory(plugins)
 if(${BUILD_TESTING})
   add_subdirectory(tests)
